# golferagent

./: .gitignore  CHANGELOG.md  README.md  golf_menu.py  pyproject.toml
docs/: FILE_OVERVIEW.md  M1_FEATURES.md  RUN_MODES.md  merge_conflicts.md
golfer_sim/: __init__.py
golfer_sim/ai/: llm_adapter.py  memory.py  policies.py  prompts.py
golfer_sim/core/: engine.py  event_bus.py  randoms.py  rules.py  scheduler.py
golfer_sim/data/calendars/: sample_2026.json
golfer_sim/data/params/: base_ruleset.json  economy_baseline.json
golfer_sim/domain/: agent.py  calendar.py  decision.py  equipment.py  events.py  finance.py  golfer.py  media.py  negotiation.py  ranking.py  season.py  sponsor.py  state.py  tournament.py  training.py
golfer_sim/persistence/: save_load.py
golfer_sim/tests/: test_engine.py  test_policy.py
golfer_sim/ui/: curses_app.py
