[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golfer-sim"
version = "0.2.0"
description = "Modular golf career simulator skeleton"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "UNLICENSED"}
authors = [{name = "Golfer Simulator Team"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
"golfer-sim" = "golfer_sim.ui.curses_app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["golfer_sim*"]

[tool.setuptools.package-data]
"golfer_sim.data" = ["calendars/*.json", "params/*.json"]
